WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132634
<
rdar://problem/16833442
> [iOS WebKit2]: Keep the order of contentView in _scrollView after rotation
https://bugs.webkit.org/show_bug.cgi?id=132634
Summary
<rdar://problem/16833442> [iOS WebKit2]: Keep the order of contentView in _sc...
Benjamin Poulain
Reported
2014-05-06 17:15:03 PDT
<
rdar://problem/16833442
> [iOS WebKit2]: Keep the order of contentView in _scrollView after rotation
Attachments
Patch
(2.29 KB, patch)
2014-05-06 17:15 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2014-05-06 17:15:33 PDT
Created
attachment 230953
[details]
Patch
Benjamin Poulain
Comment 2
2014-05-06 17:29:52 PDT
Comment on
attachment 230953
[details]
Patch Clearing flags on attachment: 230953 Committed
r168395
: <
http://trac.webkit.org/changeset/168395
>
Benjamin Poulain
Comment 3
2014-05-06 17:29:54 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug