<rdar://problem/16833442> [iOS WebKit2]: Keep the order of contentView in _scrollView after rotation https://bugs.webkit.org/show_bug.cgi?id=132634

Reviewed by Enrica Casucci.

Nice idea of Yongjun.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _beginAnimatedResizeWithUpdates:]):
(-[WKWebView _endAnimatedResize]):


Canonical link: https://commits.webkit.org/150669@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168395 268f45cc-cd09-0410-ab3c-d52691b4dbfc